2002-05-06  Sander Vesik  <sander.vesik@sun.com>

	* stylesheet/yelp-customization.xsl: 
	- initial support for <part>
	- fix informaltable display
	- fix revhistory display
	- fix non-centering of 'Contents' in the footer navbar
	- fix display of copyright holders on title page
	- improvements to the Table of Contents page

2002-05-06  Mikael Hallendal  <micke@codefactory.se>

	* NEWS: fixup

	* configure.in (GNOMELOCALEDIR): updated libgtkhtml2 deps.

	* Release 0.7
	
	* NEWS: updated for 0.7

	* configure.in: bumped version to 0.7

	* src/yelp-scrollkeeper.c:
	- Fixes #80800
	(ys_parse_index): silenced warning.

	* src/yelp-window.c: 
	- use YelpURI.
	(yw_handle_uri): somewhat cleaned up after YelpURI.

	* src/yelp-view-toc.c: 
	- use YelpURI.
	- Changed url_selected signal to uri_selected.
	- Send the links as man:... instead of path:..

	* src/yelp-view-index.c: 
	- use YelpURI.
	- Changed url_selected signal to uri_selected.
	- thinking about removing the html-view from this and only have it
	  as a entry + list for now. Later on we can add full text search
	  or more sofisticated searching.

	* src/yelp-view-content.c: 
	- use YelpURI.
	- Changed url_selected signal to uri_selected.
	(yelp_view_content_show_uri): 
	- cleaned up A LOT since this became much much easier with
	  YelpURI.

	* src/yelp-util.c (yelp_util_is_url_relative): 
	- made external and changed name from is_uri_relative.
	(yelp_util_resolve_relative_url): 
	- chagned name from yelp_util_resolve_relative_url.
	(tree_find_node_uri): use YelpURI.
	(yelp_util_find_node_from_uri): same.

	* src/yelp-uri.c:
	- Thinking of making the YelpURIType a bit mask so that I can add
	  yelp_uri_is_type (YELP_URI_TYPE_MAN | YELP_URI_TYPE_INF) since 
	  that kind of usage is all over.
	- Support index: and path: (not sure if we need path:)
	(yelp_uri_copy): added/impl
	(yelp_uri_get_relative): added/impl
	(yelp_uri_equal): added/impl.
	(yelp_uri_equal_path): added/impl.
	(yelp_uri_equal_section): added/impl.