@@ -1,3 +1,11 @@
+2002-05-07  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/yelp-section.c (yelp_section_new): check if name == NULL,
+	  hopefully fixes #80981.
+
+	* src/yelp-scrollkeeper.c:
+	(ys_parse_index_item): reverted my own stupidity.
+
 2002-05-06  Sander Vesik  <sander.vesik@sun.com>
 
 	* stylesheet/yelp-customization.xsl: 
